# Hodinoid

./: .gitignore  Cargo.toml  README.md  default.nix
src/: data_operations.rs  display_state_machine.rs  main.rs
src/utils/: config.rs  files.rs
