[package]
name = "hodinoid"
version = "0.1.0"
authors = ["jiricmi <accounts@mjiricek.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
regex = "1.11.1"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.133"
toml = "0.8.19"
